# AlphaShield

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD_PLAN.md  DOCUMENTATION_INDEX.md  Dockerfile  GITHUB_ISSUES.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_OPERATIONALIZATION.md  IMPLEMENTATION_SUMMARY_ORCHESTRATION.md  ISSUES_DETAILED.md  QUANTUM_IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  README_ORCHESTRATION.md  README_QUANTUM.md  README_SEED.md  README_TRADING.md  ROADMAP.md  SETUP.md  SPRINT_1_PLAN.md  TESTING.md  chase_statement_202410.json  chase_statement_202411.json  chase_statement_202412.json  chase_statement_202501.json  chase_statement_202502.json  demo.py  demo_orchestration.py  demo_rl.py  docker-compose.yml  example.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  milestone-task.md  sub-issue.md
.github/workflows/: deploy-production.yml  deploy-staging.yml  nightly-training.yml  test.yml
alphashield/: orchestrator.py
alphashield/agents/: alpha_trading_agent.py  base.py  base_agent.py  budget_analyzer_agent.py  contract_review_agent.py  lender_agent.py  spending_guard_agent.py  tax_optimizer_agent.py
alphashield/agents/spending_guard/: agent.py
alphashield/context/: __init__.py  capsule.py  packet.py
alphashield/database/: embeddings.py  mongodb_client.py  schemas.py
alphashield/models/: loan.py
alphashield/orchestration/: rl_hooks.py
alphashield/orchestrator/: __init__.py  graph.py
alphashield/rl/: README.md  __init__.py  bandit.py  context.py  evolution.py  policy.py  replay.py  reward.py  trainer.py
alphashield/schemas/: README.md  __init__.py  agent_schemas.py  validation.py
alphashield/trading/: __init__.py  backtester.py  classical_optimizer.py  coverage_monitor.py  coverage_ratio_monitor.py  data_provider.py  data_validator.py  execution_engine.py  execution_simulator.py  orchestrator.py  portfolio_optimizer.py  portfolio_tracker.py  quantum_optimizer.py  risk_manager.py  signal_generator.py  template_manager.py
alphashield/trading/adapters/: __init__.py  alpaca_adapter.py  base.py
alphashield/trading/models/: constraints.py  strategies.py  universe.py
alphashield/utils/: errors.py  logging_config.py  metrics.py
backtest/: __init__.py  engine.py
config/: rl.yaml  trading.yaml
dashboard/: __init__.py  app.py
docs/: AGENT_SCHEMAS.md  DEPLOYMENT_GUIDE.md  DOCUMENT_PROCESSING_FLOW.md  RL_OVERVIEW.md  quantum_optimization.md
examples/: agent_schema_integration.py  backtest_with_quantum.py  quantum_optimization_demo.py  run_backtest_example.py  schema_usage_example.py
finance/: __init__.py  coverage.py
frontend/: README.md  index.html  package.json  tsconfig.json
frontend/.github/workflows/: deploy-gh-pages.yml
frontend/src/: main.tsx
frontend/src/components/: DataUpload.tsx  Insights.tsx
frontend/src/hooks/: useStats.ts
frontend/src/pages/: Dashboard.tsx  Landing.tsx
frontend/src/services/: api.ts  mockData.ts  socket.ts
frontend/src/styles/: global.css  landing.css
frontend/src/ui/: Card.tsx  Header.tsx
jobs/: guard_runner.py  train_nightly.py
scripts/: README.md  populate_sample_data.py  seed_chase_statements.py
tests/: test_agent_schemas.py  test_agents_mock.py  test_context.py  test_coverage_ratio.py  test_guardrails.py  test_loan_model.py  test_orchestrator_graph.py  test_populate_sample_data.py  test_quantum_optimizer.py  test_refi_integration.py  test_seed_chase_statements.py  test_spending_guard.py  test_treasury_qubo.py  test_treasury_rl.py
tests/integration/: test_full_pipeline.py
tests/rl/: test_bandit_update.py  test_replay_and_policy_io.py  test_reward.py
tests/trading/: __init__.py  test_alpaca_adapter.py  test_backtester.py  test_data_validator.py  test_optimizer.py  test_risk_coverage.py  test_signals.py
tests/trading/fixtures/: synthetic_prices.py
trading_core/: __init__.py
trading_core/portfolio/: __init__.py  optimizer_qp.py
trading_core/risk/: __init__.py  guardrails.py
trading_core/signals/: __init__.py  meanrev.py  trend.py
treasury/: optimizer_qubo.py
treasury/rl/: env.py  policy.py
